--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Zerpa Code</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -96,11 +96,11 @@
   
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/me.jpg" class="img-fluid" alt="">
+            <img src="assets/img/me.png" class="img-fluid" alt="" style="mix-blend-mode: difference;">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Fullstack Developer &amp; Designer </h3>
-            <p class="fst-italic">
+            <p class="">
               HI! I'm Jorge, I'm a developer and designer. I can help in your projects with the construction of Web
               applications, working from the initial design to production and maintenance. I specialize in the frontend
               area, although I can develop complete applications that range from E-commerce to incredible personal 
@@ -116,8 +116,8 @@
       </div><!-- End About Me -->
   
       <!-- ======= Counts ======= -->
-      <div class="counts">
-        <div class="about-loader-container">
+      <!-- <div class="counts"> -->
+      <!--   <div class="about-loader-container">
           <div class="about-loader">
             <span></span>
             <span></span>
@@ -146,8 +146,9 @@
             <span></span>
           </div>
         </div class="about-loader-container">
-      
-      </div><!-- End Counts -->
+       -->
+      <!-- </div> -->
+      <!-- End Counts -->
   
       <!-- ======= Skills  ======= -->
       <div class="interests container">
@@ -239,65 +240,7 @@
   
       </div><!-- End Interests -->
   
-      <!-- ======= Testimonials ======= -->
-      <div class="testimonials container">
-  
-        <div class="section-title">
-          <h2>Testimonials</h2>
-        </div>
-  
-  
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-  
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-              </div>
-            </div><!-- End testimonial item -->
-  
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-  
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-              </div>
-            </div><!-- End testimonial item -->
-  
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-  
-        <div class="owl-carousel testimonials-carousel">
-  
-        </div>
-  
-      </div><!-- End Testimonials  -->
+      <!-- //testimonials -->
   
     </section><!-- End About Section -->
   
@@ -327,18 +270,22 @@
           <!-- landing pages  -->
   
           <!-- art and design  -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <div style="background-color: white; width: 100px; height: 100px; border-radius: 50%; margin: 0 auto;">
+          <div class="col-12 col-lg-4 col-md-6 mr-10 portfolio-item filter-design">
+            <div style="background-color: white; width: 100px; height: 100px; border-radius: 50%; margin: 0 auto;margin-bottom: 30px;">
               <img width="100px" src="./assets/img/codepen.png" alt="">
             </div>
-            Here is the link to my codepen, all that you will see here is made with code, so,
-            it can be incorporated to any web page. Hope you enjoy.
+            <p>
+              Here is the link to my <a class="text-bold" target="_blank" href="https://codepen.io/zerpa_code"> Codepen</a>, all that you will see here is made with code, so,
+              it can be incorporated to any web page. Hope you enjoy.
+            </p>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <div style="background-color: white; width: 100px; height: 100px; border-radius: 50%; margin: 0 auto">
+          <div class="col-12 col-lg-4 col-md-6 portfolio-item filter-design">
+            <div style="background-color: white; width: 100px; height: 100px; border-radius: 50%; margin: 0 auto; margin-bottom: 30px;">
               <img width="100px" src="./assets/img/instagram.png" alt="">
             </div>
-            On my instagram you can see some of my UI designs and reels with coding/design tips.
+            <p>
+              On my <a class="text-bold mask" target="_blank" href="https://www.instagram.com/zerpa.code/"> Instagram</a> you can see some of my UI designs and reels with coding/design tips.
+            </p>
           </div>
   
   
